fix heading and header overflows and scrolls

--- a/src/app/shared/layout/header/header.component.scss
+++ b/src/app/shared/layout/header/header.component.scss
@@ -11,7 +11,6 @@
 .title {
     font-weight: 700;
     font-size: 22px;
-    height: 24px;
 }
 
 .subtitle {
@@ -20,12 +19,8 @@
 
 .header {
     .title-box {
-        white-space: nowrap;
-        text-overflow: ellipsis;
         display: inline-block;
         width: calc(100% - 40px - 42px - 42px - 42px - 80px);
-        overflow-x: hidden;
-        overflow-y: hidden;
         margin: 0 18px;
     }
 }
